k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: server-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      component: api

  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: server
          image: cinguilherme/multic-server
          ports:
            - containerPort: 5000
