k8s/server-clusterip-service.yml
apiVersion: v1
kind: Service

metadata:
  name: server-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 5000
      targetPort: 5000
